src/lib/tcx-global-search/peggy.ts
// Generated by Peggy 3.0.2.
//
// https://peggyjs.org/

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { QUERY: peg$parseQUERY };
  var peg$startRuleFunction = peg$parseQUERY;

  var peg$c0 = "(";
  var peg$c1 = ")";
  var peg$c2 = "not";
  var peg$c3 = "actor.name";
  var peg$c4 = "actor.description";
  var peg$c5 = "actor.targets_category";
  var peg$c6 = "actor.country_code";
  var peg$c7 = "actor.cve";
  var peg$c8 = "campaign.name";
  var peg$c9 = "campaign.description";
  var peg$c10 = "campaign.cve";
  var peg$c11 = "tool.name";
  var peg$c12 = "tool.version";
  var peg$c13 = "tool.cve";
  var peg$c14 = "actor.active";
  var peg$c15 = "actor.tlp";
  var peg$c16 = "actor.sophistication";
  var peg$c17 = "campaign.tlp";
  var peg$c18 = "tool.tlp";
  var peg$c19 = "actor.first_seen";
  var peg$c20 = "actor.last_seen";
  var peg$c21 = "campaign.first_seen";
  var peg$c22 = "campaign.last_seen";
  var peg$c23 = "tool.first_seen";
  var peg$c24 = "tool.last_seen";
  var peg$c25 = "actor.types";
  var peg$c26 = "actor.aliases";
  var peg$c27 = "tool.targeted_platforms";
  var peg$c28 = "actor.targets";
  var peg$c29 = "actor.campaigns";
  var peg$c30 = "actor.country";
  var peg$c31 = "actor.attack_patterns";
  var peg$c32 = "=";
  var peg$c33 = "^";
  var peg$c34 = "$";
  var peg$c35 = "~";
  var peg$c36 = ">";
  var peg$c37 = ">=";
  var peg$c38 = "<";
  var peg$c39 = "<=";
  var peg$c40 = "\"";
  var peg$c41 = "true";
  var peg$c42 = "false";
  var peg$c43 = "/";
  var peg$c44 = "and";
  var peg$c45 = "or";

  var peg$r0 = /^[0-9]/;
  var peg$r1 = /^[a-z0-9]/i;
  var peg$r2 = /^[^"]/;
  var peg$r3 = /^[ \t\n\r]/;

  var peg$e0 = peg$literalExpectation("(", false);
  var peg$e1 = peg$literalExpectation(")", false);
  var peg$e2 = peg$literalExpectation("NOT", true);
  var peg$e3 = peg$literalExpectation("actor.name", false);
  var peg$e4 = peg$literalExpectation("actor.description", false);
  var peg$e5 = peg$literalExpectation("actor.targets_category", false);
  var peg$e6 = peg$literalExpectation("actor.country_code", false);
  var peg$e7 = peg$literalExpectation("actor.cve", false);
  var peg$e8 = peg$literalExpectation("campaign.name", false);
  var peg$e9 = peg$literalExpectation("campaign.description", false);
  var peg$e10 = peg$literalExpectation("campaign.cve", false);
  var peg$e11 = peg$literalExpectation("tool.name", false);
  var peg$e12 = peg$literalExpectation("tool.version", false);
  var peg$e13 = peg$literalExpectation("tool.cve", false);
  var peg$e14 = peg$literalExpectation("actor.active", false);
  var peg$e15 = peg$literalExpectation("actor.tlp", false);
  var peg$e16 = peg$literalExpectation("actor.sophistication", false);
  var peg$e17 = peg$literalExpectation("campaign.tlp", false);
  var peg$e18 = peg$literalExpectation("tool.tlp", false);
  var peg$e19 = peg$literalExpectation("actor.first_seen", false);
  var peg$e20 = peg$literalExpectation("actor.last_seen", false);
  var peg$e21 = peg$literalExpectation("campaign.first_seen", false);
  var peg$e22 = peg$literalExpectation("campaign.last_seen", false);
  var peg$e23 = peg$literalExpectation("tool.first_seen", false);
  var peg$e24 = peg$literalExpectation("tool.last_seen", false);
  var peg$e25 = peg$literalExpectation("actor.types", false);
  var peg$e26 = peg$literalExpectation("actor.aliases", false);
  var peg$e27 = peg$literalExpectation("tool.targeted_platforms", false);
  var peg$e28 = peg$literalExpectation("actor.targets", false);
  var peg$e29 = peg$literalExpectation("actor.campaigns", false);
  var peg$e30 = peg$literalExpectation("actor.country", false);
  var peg$e31 = peg$literalExpectation("actor.attack_patterns", false);
  var peg$e32 = peg$literalExpectation("=", false);
  var peg$e33 = peg$literalExpectation("^", false);
  var peg$e34 = peg$literalExpectation("$", false);
  var peg$e35 = peg$literalExpectation("~", false);
  var peg$e36 = peg$literalExpectation(">", false);
  var peg$e37 = peg$literalExpectation(">=", false);
  var peg$e38 = peg$literalExpectation("<", false);
  var peg$e39 = peg$literalExpectation("<=", false);
  var peg$e40 = peg$otherExpectation("NUMBER");
  var peg$e41 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e42 = peg$otherExpectation("STRING");
  var peg$e43 = peg$classExpectation([["a", "z"], ["0", "9"]], false, true);
  var peg$e44 = peg$literalExpectation("\"", false);
  var peg$e45 = peg$classExpectation(["\""], true, false);
  var peg$e46 = peg$literalExpectation("TRUE", true);
  var peg$e47 = peg$literalExpectation("FALSE", true);
  var peg$e48 = peg$otherExpectation("DATE");
  var peg$e49 = peg$literalExpectation("/", false);
  var peg$e50 = peg$literalExpectation("AND", true);
  var peg$e51 = peg$literalExpectation("OR", true);
  var peg$e52 = peg$otherExpectation("whitespace");
  var peg$e53 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);

  var peg$f0 = function(head, tail) {

    function formatNode(node) {
      if(node?.key !== undefined && typeof node?.key !== 'object') {
        const type = node?.value?.type || "TEXT"
        node.value = node?.value?.value ?? ""
        node.key = {
          path: node.key,
          type
        }
      }
      return node;
    }

    if(tail.length) {
      const operations = new Set(tail.map(t => t[1]));
      if (operations.size > 1) {
        error("MIXING_OPERATORS");
      }

      const operation = tail[0][1];
      const subnodes = [formatNode(head), ...tail.map(t => {
        return formatNode(t[3]);
      })]

      return {
        operation,
        subnodes
      }
    }

    return formatNode(head)
  };
  var peg$f1 = function(expr) { return expr; };
  var peg$f2 = function(query) { return query; };
  var peg$f3 = function(not, field, operation, value) { return {not: !!not, field, operation, value, type: 'BOOLEAN'} };
  var peg$f4 = function(not, field, operation, value) { return {not: !!not, field, operation, value, type: 'DATE'} };
  var peg$f5 = function(not, field, operation, value) { return {not: !!not, field, operation, value, type: 'CHOICE'} };
  var peg$f6 = function(not, field, operation, value) { return {not: !!not, field, operation, value, type: 'LIST'} };
  var peg$f7 = function(not, field, operation, value) { return {not: !!not, field, operation, value, type: 'RELATIONSHIP'} };
  var peg$f8 = function(not, field, operation, value) { return {not: !!not, field, operation, value, type: 'STRING'} };
  var peg$f9 = function() { return parseFloat(text(), 10); };
  var peg$f10 = function(str) { return str.join(""); };
  var peg$f11 = function(str) { return str.join(""); };
  var peg$f12 = function() { return 1 };
  var peg$f13 = function() { return 0 };
  var peg$f14 = function(day, month, year) {
      if(isNaN(new Date(year, month, day))) {
        error('Wrong date format DD/MM/YYYY');
      }
      return [day, month, year].join('/')
  };
  var peg$f15 = function() { return 'AND'; };
  var peg$f16 = function() { return 'OR'; };
  var peg$currPos = 0;
  var peg$savedPos = 0;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = 0;
  var peg$maxFailExpected = [];
  var peg$silentFails = 0;

  var peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseQUERY() {
    var s0;

    s0 = peg$parseEXPRESSION();

    return s0;
  }

  function peg$parseEXPRESSION() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = peg$parseFACTOR();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parse_();
      s5 = peg$parseLOGICAL_OPERATOR();
      if (s5 !== peg$FAILED) {
        s6 = peg$parse_();
        s7 = peg$parseFACTOR();
        if (s7 !== peg$FAILED) {
          s4 = [s4, s5, s6, s7];
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parse_();
        s5 = peg$parseLOGICAL_OPERATOR();
        if (s5 !== peg$FAILED) {
          s6 = peg$parse_();
          s7 = peg$parseFACTOR();
          if (s7 !== peg$FAILED) {
            s4 = [s4, s5, s6, s7];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      peg$savedPos = s0;
      s0 = peg$f0(s1, s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseFACTOR() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 40) {
      s1 = peg$c0;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parseEXPRESSION();
      if (s3 !== peg$FAILED) {
        s4 = peg$parse_();
        if (input.charCodeAt(peg$currPos) === 41) {
          s5 = peg$c1;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e1); }
        }
        if (s5 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f1(s3);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseSIMPLE_QUERY();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$f2(s1);
      }
      s0 = s1;
    }

    return s0;
  }

  function peg$parseSIMPLE_QUERY() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (input.substr(peg$currPos, 3).toLowerCase() === peg$c2) {
      s2 = input.substr(peg$currPos, 3);
      peg$currPos += 3;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e2); }
    }
    if (s2 === peg$FAILED) {
      s2 = null;
    }
    s3 = peg$parse_();
    s4 = peg$parseBOOLEAN_FIELD();
    if (s4 !== peg$FAILED) {
      s5 = peg$parse_();
      s6 = peg$parseBOOLEAN_OPERATOR();
      if (s6 !== peg$FAILED) {
        s7 = peg$parse_();
        s8 = peg$parseBOOLEAN();
        if (s8 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f3(s2, s4, s6, s8);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parse_();
      if (input.substr(peg$currPos, 3).toLowerCase() === peg$c2) {
        s2 = input.substr(peg$currPos, 3);
        peg$currPos += 3;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e2); }
      }
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      s3 = peg$parse_();
      s4 = peg$parseDATE_FIELD();
      if (s4 !== peg$FAILED) {
        s5 = peg$parse_();
        s6 = peg$parseDATE_OPERATOR();
        if (s6 !== peg$FAILED) {
          s7 = peg$parse_();
          s8 = peg$parseDATE();
          if (s8 !== peg$FAILED) {
            peg$savedPos = s0;
            s0 = peg$f4(s2, s4, s6, s8);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parse_();
        if (input.substr(peg$currPos, 3).toLowerCase() === peg$c2) {
          s2 = input.substr(peg$currPos, 3);
          peg$currPos += 3;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e2); }
        }
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        s3 = peg$parse_();
        s4 = peg$parseCHOICE_FIELD();
        if (s4 !== peg$FAILED) {
          s5 = peg$parse_();
          s6 = peg$parseCHOICE_OPERATOR();
          if (s6 !== peg$FAILED) {
            s7 = peg$parse_();
            s8 = peg$parseCHOICE();
            if (s8 !== peg$FAILED) {
              peg$savedPos = s0;
              s0 = peg$f5(s2, s4, s6, s8);
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parse_();
          if (input.substr(peg$currPos, 3).toLowerCase() === peg$c2) {
            s2 = input.substr(peg$currPos, 3);
            peg$currPos += 3;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e2); }
          }
          if (s2 === peg$FAILED) {
            s2 = null;
          }
          s3 = peg$parse_();
          s4 = peg$parseLIST_FIELD();
          if (s4 !== peg$FAILED) {
            s5 = peg$parse_();
            s6 = peg$parseLIST_OPERATOR();
            if (s6 !== peg$FAILED) {
              s7 = peg$parse_();
              s8 = peg$parseLIST();
              if (s8 !== peg$FAILED) {
                peg$savedPos = s0;
                s0 = peg$f6(s2, s4, s6, s8);
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = peg$parse_();
            if (input.substr(peg$currPos, 3).toLowerCase() === peg$c2) {
              s2 = input.substr(peg$currPos, 3);
              peg$currPos += 3;
            } else {
              s2 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e2); }
            }
            if (s2 === peg$FAILED) {
              s2 = null;
            }
            s3 = peg$parse_();
            s4 = peg$parseRELATIONSHIP_FIELD();
            if (s4 !== peg$FAILED) {
              s5 = peg$parse_();
              s6 = peg$parseRELATIONSHIP_OPERATOR();
              if (s6 !== peg$FAILED) {
                s7 = peg$parse_();
                s8 = peg$parseRELATIONSHIP();
                if (s8 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s0 = peg$f7(s2, s4, s6, s8);
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
            if (s0 === peg$FAILED) {
              s0 = peg$currPos;
              s1 = peg$parse_();
              if (input.substr(peg$currPos, 3).toLowerCase() === peg$c2) {
                s2 = input.substr(peg$currPos, 3);
                peg$currPos += 3;
              } else {
                s2 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e2); }
              }
              if (s2 === peg$FAILED) {
                s2 = null;
              }
              s3 = peg$parse_();
              s4 = peg$parseSTRING_FIELD();
              if (s4 !== peg$FAILED) {
                s5 = peg$parse_();
                s6 = peg$parseSTRING_OPERATOR();
                if (s6 !== peg$FAILED) {
                  s7 = peg$parse_();
                  s8 = peg$parseSTRING();
                  if (s8 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s0 = peg$f8(s2, s4, s6, s8);
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseSTRING_FIELD() {
    var s0;
